Refactor: Adds Selector to 'At Risk' page
